# ia_agente

./: .gitignore  pyproject.toml
ia_agente/: app.py
tests/: test_app.py
